p143 컴파일러에 if 기본 구현

--- a/test/compiler/dune
+++ b/test/compiler/dune
@@ -1,3 +1,5 @@
 (test
  (name compiler)
- (libraries monkey.lib fmt alcotest))
+ (libraries monkey.lib fmt alcotest)
+ (preprocess
+  (pps ppx_deriving.show ppx_deriving.eq)))
